# desafio-veeries

./: README.md
desafio-veeries/: clima.db  municipios.json:Zone.Identifier  pyproject.toml
desafio-veeries/desafio_veeries/: app.py  banco.py
desafio-veeries/desafio_veeries/requests/: requests.http
