[tool.poetry]
name = "desafio-veeries"
version = "0.1.0"
description = ""
authors = ["gabriel-s-flores <gabriel.soares27697@gmail.com>"]
readme = "README.md"
packages = [{include = "desafio_veeries"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pyowm = "^3.3.0"
db-sqlite3 = "^0.0.1"
Flask = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
